changed position of overlap group in css file from fixed to absolute

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   }
   
   .box .group {
-    position: fixed;
+    position: absolute;
     width: 1526px;
     height: 1462px;
     top: 0;
